@@ -52,6 +52,9 @@ public:
 
   virtual const VrmlField *getField(const char *fieldName) const;
   virtual void setField(const char *fieldName, const VrmlField &fieldValue);
+  
+  const VrmlSFNode & getProxy() const;
+  void setProxy(const VrmlSFNode & proxy);
 
 private:
 
